--- a/views/_header.pug
+++ b/views/_header.pug
@@ -8,7 +8,7 @@ header
         li
           a(href='#') Bill Creation
         li
-          a(href='#') Update Menu
+          a(href='/menu') Update Menu
         li
           a(href='#') Download Menu
         li
