--- a/views/_header.pug
+++ b/views/_header.pug
@@ -10,7 +10,7 @@ header
         li
           a(href='/menu') Update Menu
         li
-          a(href='#') Download Menu
+          a(href='/print') Print Menu
         li
           a(href='#') Expense Sheet
         li
