modify print module

--- a/views/print.pug
+++ b/views/print.pug
@@ -27,3 +27,5 @@ block content
             .pm-vertical-seperator
             .pm-menu-item-right
                 .pm-menu-item-3
+        .pm-footer
+            p Call/Watsapp : 9142268008
