--- a/public/css/style.css
+++ b/public/css/style.css
@@ -421,13 +421,13 @@ header {
   padding: 0 1rem;
   font-weight: 600;
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 .pm-menu-items h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-transform: uppercase;
 }
 
@@ -452,6 +452,14 @@ header {
   background-color: #000;
   margin: 1rem;
   margin-bottom: 4rem;
+}
+
+.pm-footer {
+  background-color: #1d324b73;
+  padding: 0.5rem 0;
+  color: #fff;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
