--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,15 +388,21 @@ header {
 
 .pm-selection {
   width: 80%;
+  display: flex;
+  gap: 1rem;
 }
 .pm-selection select {
   background-color: #1d324b73;
-  width: 100%;
-  font-size: 1.6rem;
+  width: 70%;
+  font-size: 1.4rem;
   padding: 1rem 0.5rem;
   outline: none;
   border-radius: 10px;
   color: #fff;
+}
+
+#pm-select-format {
+  width: 30%;
 }
 
 .pm-btn-print {
@@ -455,7 +461,7 @@ header {
 }
 
 .pm-footer {
-  background-color: #1d324b73;
+  background-color: #1d324ba4;
   padding: 0.5rem 0;
   color: #fff;
   font-size: 1.6rem;
