--- a/views/_header.pug
+++ b/views/_header.pug
@@ -6,7 +6,7 @@ header
     .header-menu-container
       ul
         li
-          a(href='#') Bill Creation
+          a(href='/bill') Bill Creation
         li
           a(href='/menu') Update Menu
         li
