--- a/views/bill.pug
+++ b/views/bill.pug
@@ -71,7 +71,7 @@ block content
             .bill-receipt-navigation
                 a.receipt-prev(href='#') Previous
             .bill-seperator
-            .bill-company-title Prabhand
+            .bill-company-title Prabandh
             .bill-final-receipts
                 .bill-final-receipt
                     p Chicken Curry
