--- a/views/_header.pug
+++ b/views/_header.pug
@@ -12,7 +12,7 @@ header
         li
           a(href='/print') Print Menu
         li
-          a(href='#') Expense Sheet
+          a(href='/expense') Expense Sheet
         li
           a(href='#') User Review
         li
