--- a/public/css/style.css
+++ b/public/css/style.css
@@ -743,6 +743,324 @@ header {
   }
 }
 
+/* **********************************EXPENSE PAGE ****************************** */
+
+.expense-container {
+  width: 90%;
+  margin: auto;
+}
+
+.expense-hidden {
+  display: none;
+}
+
+.expense-summary {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.expense-summary--income,
+.expense-summary--balance {
+  background-color: rgba(32, 191, 107, 43%);
+  padding: 0.8rem 1rem;
+  border-radius: 1rem;
+}
+
+.expense-summary--expense {
+  background-color: rgba(235, 77, 75, 66%);
+  padding: 1rem 0.8rem;
+  border-radius: 1rem;
+}
+
+.expense-summary--title {
+  font-weight: 700;
+  font-size: 1.6rem;
+}
+
+.expense-summary--value {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.expense-seperator {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  margin: 1.5rem 0;
+}
+
+.expense-cta {
+  width: 80%;
+  margin: auto;
+  background-color: #48a3d7;
+  text-align: center;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.expense-cta-btn {
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.expense-month {
+  background-color: #61c4d1;
+  color: #fff;
+  width: 40px;
+  font-weight: 700;
+  font-size: 1.2rem;
+  text-align: center;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  text-transform: uppercase;
+}
+
+.expense-date {
+  background-color: #626756;
+  color: #fff;
+  padding: 0.5rem;
+  display: block;
+  width: 40px;
+  font-size: 1.8rem;
+  font-weight: 700;
+  text-align: center;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.expense {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(1, 72, 30, 25%);
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  color: #fff;
+  margin: 1rem 0 2rem 0;
+}
+
+.expense-info {
+  flex: 1;
+  margin: 0 1.5rem;
+}
+
+.expense-info h1 {
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
+}
+
+.expense-stats--income,
+.expense-stats--balance {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.expense-stats--expense {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.expense-stats {
+  display: flex;
+  justify-content: space-between;
+}
+
+.expense-delete {
+  margin: 0 1rem;
+}
+
+.expense-stats--income,
+.expense-stats--balance {
+  color: #83faba;
+}
+
+.expense-stats--expense {
+  color: #eb4d4b;
+}
+
+.expense-modal-wrapper {
+  background-color: rgba(245, 211, 101, 65%);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.expense-modal-form {
+  background-color: #091524b2;
+  color: #fff;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 36px 2px rgba(0, 0, 0, 50%);
+}
+
+.expense-modal-form .modal-input {
+  padding: 1rem 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
+  width: 100%;
+}
+
+.expense-modal-cta .btn-modal {
+  text-decoration: none;
+  background-color: #20bf6b;
+  padding: 0.8rem 1rem;
+  border-radius: 0.8rem;
+  outline: none;
+  color: #fff;
+  font-size: 1.6rem;
+  border: none;
+}
+
+.expense-modal-cta {
+  margin: 2rem 0 1rem 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.expense-modal-cta .btn-modalexp--cancel {
+  background-color: #eb4d4b;
+}
+
+/* **********************************EXPENSE ITEM ****************************** */
+
+.expense-info {
+  color: rgb(54, 53, 53);
+  font-size: 1.4rem;
+  margin-top: 1rem;
+}
+
+.expense-seperator {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  margin: 1.5rem 0;
+}
+
+.expense-item-container {
+  width: 90%;
+  margin: auto;
+}
+
+.expense-item-cta {
+  display: flex;
+  justify-content: space-between;
+}
+
+.expense-redirect {
+  margin-top: 1rem;
+}
+
+.expense-item-cta a,
+.expense-redirect a {
+  color: #fff;
+  background-color: #48a3d7;
+  text-decoration: none;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  border-radius: 1rem;
+}
+
+.expense-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(1, 72, 30, 25%);
+  padding: 1rem;
+  border-radius: 1rem;
+  color: #fff;
+  margin: 1rem 0 2rem 0;
+}
+
+.expense-item p {
+  font-size: 1.6rem;
+  color: rgb(54, 53, 53);
+  text-transform: uppercase;
+}
+
+.item-total-expense {
+  font-weight: 700;
+}
+
+.expense-item-modal {
+  background-color: rgba(245, 211, 101, 65%);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.expense-item-modal-content {
+  background-color: #091524b2;
+  color: #fff;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 36px 2px rgba(0, 0, 0, 50%);
+}
+
+.item-header {
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+}
+
+.expense-detail--input {
+  width: 100%;
+  background: transparent;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.expense-detail--input::placeholder {
+  color: rgb(216, 214, 214);
+}
+
+.btn-modal-item-close,
+.btn-modal-item-save {
+  text-decoration: none;
+  background-color: #20bf6b;
+  padding: 0.8rem 1rem;
+  border-radius: 0.8rem;
+  outline: none;
+  color: #fff;
+  font-size: 1.6rem;
+  border: none;
+}
+
+.btn-modal-item-close {
+  background-color: #eb4d4b;
+}
+
+.expense-item-modal-cta {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
 /************************************ ERROR PAGE ********************************/
 .error-wrapper {
   margin-top: 2rem;
