--- a/views/base.pug
+++ b/views/base.pug
@@ -8,6 +8,7 @@ html
             link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
             link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap",rel="stylesheet")
             link(href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap",rel="stylesheet")
+            link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap",rel="stylesheet")
 
             link(rel="stylesheet", href="/css/style.css ")
             
