--- a/views/bill.pug
+++ b/views/bill.pug
@@ -18,6 +18,7 @@ block content
                     option(value='curry') CURRY
                     option(value='rice') RICE
                     option(value='biryani') BIRYANI
+                    option(value='sides') SIDES
 
             .bill-selection-info
                 h2 Details
