--- a/views/_header.pug
+++ b/views/_header.pug
@@ -14,7 +14,7 @@ header
         li
           a(href='/expense') Expense Sheet
         li
-          a(href='#') User Review
+          a(href='/review') User Review
         li
           a(href='#') Logout
   .company-logo
