--- a/views/base.pug
+++ b/views/base.pug
@@ -9,6 +9,7 @@ html
             link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap",rel="stylesheet")
             link(href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap",rel="stylesheet")
             link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap",rel="stylesheet")
+            link(href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap",rel="stylesheet")
 
             link(rel="stylesheet", href="/css/style.css ")
             
